@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,20 +21,14 @@
  * questions.
  */
 
-// key: compiler.misc.feature.deconstruction.patterns
-// key: compiler.misc.feature.pattern.switch
-// key: compiler.warn.preview.feature.use.plural
-// key: compiler.err.foreach.not.exhaustive.on.type
-// options: --enable-preview -source ${jdk.version} -Xlint:preview
+// key: compiler.err.cannot.assign.not.declared.guard
 
-import java.util.List;
-
-class ForeachNotExhaustive {
-    void m(List<Object> points) {
-        for (Point(var x, var y): points) {
-            System.out.println();
+class CannotAssignNotDeclaredGuard {
+    void test(Object i) {
+        final boolean b;
+        switch (i) {
+            case Object o when b = true -> {}
+            default -> {}
         }
     }
-
-    record Point(Integer x, Integer y) { }
 }
