@@ -25,7 +25,6 @@
  * @test
  * @summary Test behavior of Pretty
  * @modules jdk.compiler
- * @enablePreview
  */
 
 import java.io.IOException;
@@ -93,7 +92,7 @@ public class PrettyTest {
 
         StringWriter out = new StringWriter();
         JavacTask ct = (JavacTask) tool.getTask(out, null, noErrors,
-            List.of("--enable-preview", "-source", Integer.toString(Runtime.version().feature())), null,
+            List.of(), null,
             Arrays.asList(new MyFileObject(code)));
         return ct.parse().iterator().next();
     }
